# nix-flake-bazel-issue

./: MODULE.bazel  README.md  flake.nix  foo.patch  shell.nix
